--- a/src/components/Dialog/Dialog.styles.scss
+++ b/src/components/Dialog/Dialog.styles.scss
@@ -1,62 +1,85 @@
 .dialog_section {
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 20px;
+    padding: 35px 20px;
+
+    .companion_container, .me_container {
+        flex-direction: column;
+        .message {
+            display: flex;
+            align-items: flex-end;
+            height: fit-content;
+            margin: 0px;
+            margin-bottom: 9px;
+            .dialog_container {
+                flex-direction: column;
+                text-align: left;
+                padding-top: 10px;
+                padding-left: 16px;
+                padding-right: 8px;
+                padding-bottom: .5em;
+                line-height: 24px;
+                width: 469px;
+                height: fit-content;
+                background-color:#464646;
+                border-radius: 9px;
+                .message_body {
+                    width: 425px;
+                    position: relative;
+                    &_me {
+                        font-weight: 500;
+                    }
+                    span {
+                        font-size: 20px;
+                        font-weight: 400;
+                        color: #ECECEC;
+                    }
+                    h5 {
+                        margin-top: 0px;
+                        margin-bottom: .2em;
+                        font-size: 20px;
+                    }
+                    .time_container {
+                        float: right;
+                        transform: translateX(40px);
+                        span {
+                            color: #14FF72;
+                        }
+                    }
+                }
+            }
+            .avatar {
+                width: 60px;
+                height: 59px;
+                border-radius: 52px;
+                margin-right: 17px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
+
+    .me_container {
+        width: 100%;
+        .message {
+            display: flex;
+            justify-content: end;
+            .dialog_container {
+                padding: 7px 8px 7px 16px !important;
+                background-color: rgba(20, 255, 114, 0.7) !important;
+                .time_container {
+                    top: 20px !important;
+                    span {
+                        color: #DFDFDF !important;
+                    }
+                }
+                span {
+                    font-weight: 500;
+                    color: white !important;
+                }
+            }
+        }
+    }
+
 }
 
-.companion_container {
-    display: flex;
-    flex-direction: column;
-    .message {
-        display: flex;
-        align-items: flex-end;
-    }
-    .avatar {
-        width: 60px;
-        height: 59px;
-        border-radius: 52px;
-        margin-right: 17px;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-
-.dialog_container {
-    flex-direction: column;
-    text-align: left;
-    padding-top: 10px;
-    padding-left: 16px;
-    padding-right: 8px;
-    padding-bottom: 5px;
-    line-height: 24px;
-    width: 469px;
-    height: fit-content;
-    background-color:#464646;
-    .message_body {
-        word-wrap: break-word;
-        width: 425px;
-        position: relative;
-        &_companion {
-            min-height: 60px;
-        }
-        &_me {
-            background-color: #14FF72;
-            font-weight: 500;
-        }
-        
-        h5 {
-            margin-top: 0px;
-            margin-bottom: 0px;
-            line-height: 24px;
-        }
-        .time_container {
-            position: absolute;
-            top: 50px;
-            right: -40px;
-            float: right;
-            color: #14FF72;
-        }
-    }
-}
