--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -2,9 +2,9 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    font-size: 26px;
     background-color: #0F0F0F;
     padding: 15px 0px 15px 28px;
-    width: 100%;
     .avatar {
         margin-right: 18px;
         width: 45px;
