--- a/src/components/JoinForm/JoinForm.styles.scss
+++ b/src/components/JoinForm/JoinForm.styles.scss
@@ -13,4 +13,12 @@
         background-color: green;
         border: none;
     }
+    #cache_clear {
+        position: absolute;
+        top: 10px;
+        padding: 5px;
+        border: none;
+        color: white;
+        background-color: red;
+    }
 };
